add revenue and address to show more about result

--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -72,16 +72,14 @@
                             <div class="container-fluid titleOfGeneralResult" style="margin-top: 20px">
                                 <div class="row">
                                     <div class="col-sm-8">
-                                        <p>
-                                            Ally Financial Inc. is a bank holding company organized in Delaware and headquartered in Detroit, Michigan. The company provides financial services including online banking, car finance, corporate lending, vehicle insurance, mortgages, credit cards, and brokerage firm services.
-                                            Ally is ranked 19th on the list of largest banks in the United States by assets. It is the largest car finance company in the U.S. by volume[4] and serves approximately 18,500 automotive dealerships and 4.3 million retail consumers.[3] Via its SmartAuction online marketplace for auto auctions, launched in 2000, the company has sold more than 5 million vehicles including 356,000 vehicles sold in 2017.
+                                        <p id="summaryOfResult">
                                         </p>
                                     </div>
                                     <div class="col-sm-4">
                                         <table class="table tableOfGeneralInfo">
                                             <tr>
                                                 <td>Address</td>
-                                                <td>USA</td>
+                                                <td id="addressOfResult"></td>
                                             </tr>
                                             <tr>
                                                 <td>Founded</td>
