change loader for delete and update pages

--- a/html/deleteBySearching.html
+++ b/html/deleteBySearching.html
@@ -27,6 +27,6 @@
 </div>
 
 <div id="searching_for_results">
-    <h4>Please wait...</h4>
+    <h4>Searching...</h4>
     <div class="loader"></div>
 </div>
