update table data - general info of result

--- a/html/nav.html
+++ b/html/nav.html
@@ -31,7 +31,7 @@
                                aria-expanded="false">Search</a>
                             <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink3">
                                 <a class="dropdown-item" href="#" ng-click="show_search('name');">Search By Name <i class="fas fa-address-book"></i></a>
-                                <a class="dropdown-item" href="#" ng-click="show_search('city');">Search By City <i class="fas fa-map-marker-alt"></i></a>
+                                <a class="dropdown-item" href="#" ng-click="show_search('city');">Search By Address <i class="fas fa-map-marker-alt"></i></a>
                             </div>
                         </li>
 					</li>
