--- a/html/industry.html
+++ b/html/industry.html
@@ -3,17 +3,17 @@
 
     <div class="firstStats" style="height: fit-content">
         <div style="width: 33%; height: 33%; display: inline-block">
-            <h4>Products Statistic</h4>
+            <h4>Top Products</h4>
             <canvas id="ProductsDoughnutChart"></canvas>
         </div>
 
         <div style="width: 33%; height: 33%; display: inline-block">
-            <h4>Industry Statistic</h4>
+            <h4>Top Industry</h4>
             <canvas id="IndustryDoughnutChart"></canvas>
         </div>
 
         <div style="width: 33%; height: 33%; display: inline-block">
-            <h4>Connections Type Statistic</h4>
+            <h4>Top Connections Type</h4>
             <canvas id="ConnectionDoughnutChart"></canvas>
         </div>
     </div>
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-sm-6" style="width: 50%; height: 40%; display: inline-block">
                     <div>
-                        <h4>Show 5 Biggest Company By Number Of Relation</h4>
+                        <h4>Top Biggest Company By Number Of Relation</h4>
 
                         <span ng-repeat="connection in distinctConnections">
                             <label>
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="col-sm-6" id="wordsCloud" style="width: 40%; height: 40%; display: inline-block; position: relative">
-                    <h4>Biggest Company By Revenue</h4>
+                    <h4>Top Biggest Company By Revenue</h4>
                     <word-cloud words="words" width="width" height="height" padding="padding" random="random" use-tooltip="true"></word-cloud>
                 </div>
             </div>
