--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -52,28 +52,24 @@
                                 <div class="row">
                                     <div class="col-sm-8">
                                         <br>
-                                        <h3 id="selectedCompanyName"></h3>
+                                        <h3 id="selectedCompanyName" style="margin-bottom: 2px"></h3>
+                                        <p id="wikiNameOfResult" style="font-size: medium; color: #1f497d; margin-bottom: 2px"></p>
                                         <h4 id="secondTitleResult"></h4>
                                     </div>
-                                    <div class="col-sm-4" style="margin-top: 20px" id="companyLogoDiv">
+                                    <div class="col-sm-4" style="margin-top: 20px">
                                         <img class ="logoImg" id="companyLogo" src="" alt="logo" height="100" width="150">
                                     </div>
                                 </div>
                             </div>
 
                             <div class="products" style="margin-top: 20px">
-                                <span class="badge badge-pill badge-info">Car finance</span>
-                                <span class="badge badge-pill badge-info">Online banking</span>
-                                <span class="badge badge-pill badge-info">Mortgages</span>
-                                <span class="badge badge-pill badge-info">Credit cards</span>
-                                <span class="badge badge-pill badge-info">Brokerage firm</span>
+                                <span class="badge badge-pill badge-info" style="margin-left: 5px; margin-right: 5px;" ng-repeat="product in resultProducts">{{product}}</span>
                             </div>
 
                             <div class="container-fluid titleOfGeneralResult" style="margin-top: 20px">
                                 <div class="row">
                                     <div class="col-sm-7">
-                                        <p id="summaryOfResult">
-                                        </p>
+                                        <p id="summaryOfResult"></p>
                                     </div>
                                     <div class="col-sm-5">
                                         <table class="table tableOfGeneralInfo">
