--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -115,6 +115,25 @@
                                 Click on Node or Connection for Details
                             </div>
                             <div cla="container">
+                                <div class="row">
+                                    <div class="col-sm-3" style="padding-left: 0">
+                                        <span style="color: #31a9bc;font-size: 15px"><i class="fas fa-circle"></i>Selected Company</span>
+                                    </div>
+                                    <div class="col-sm-3" style="padding-left: 0">
+                                        <span style="color: #464f52;font-size: 15px"><i class="fas fa-circle"></i>Related Company</span>
+                                    </div>
+                                    <div class="col-sm-2" style="padding-left: 0">
+                                        <span style="color: red;font-size: 15px"><i class="fas fa-minus"></i>Competitors</span>
+                                    </div>
+                                    <div class="col-sm-2" style="padding-left: 0">
+                                        <span style="color: #31963e;font-size: 15px"><i class="fas fa-minus"></i>Sisters</span>
+                                    </div>
+                                    <div class="col-sm-2" style="padding-left: 0">
+                                        <span style="color: blue;font-size: 15px"><i class="fas fa-minus"></i>Subsidiaries</span>
+                                    </div>
+
+                                </div>
+
                                 <div class="row " id="graphDetails" style="display: none;">
                                     <div class="col-sm-2" >
                                         RSSD ID
