update stock graph show

--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -143,15 +143,29 @@
                             </div>
                         </div>
 
+
                         <div role="tabpanel" class="tab-pane container fade" id="Stock">
-                            <div class="tradingview-widget-container">
-                                <div id="tradingview_a5966"></div>
-                                <div class="tradingview-widget-copyright">
-                                    <div id="fillHrefForStock">
+
+                            <div id="StockFound">
+                                <br>
+                                <h3 id="stockOf"></h3>
+                                <h5 id="tradedAsTitle"></h5>
+                                <div class="tradingview-widget-container">
+                                    <div id="tradingview_dd592"></div>
+                                    <div class="tradingview-widget-copyright">
+                                        <div id="fillHrefForStock">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+
+                            <div id="StockNotFound">
+                                <br><br>
+                                <h3>No Data About Stock Found</h3>
+                            </div>
+
                         </div>
+
 
                         <div role="tabpanel" class="tab-pane container fade" id="Articles">
 
