before merge with pnina

--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -63,7 +63,7 @@
                             </div>
 
                             <div class="products" style="margin-top: 20px">
-                                <span class="badge badge-pill badge-info" style="margin-left: 5px; margin-right: 5px;" ng-repeat="product in resultProducts">{{product}}</span>
+                                <span class="badge badge-pill badge-info" style="margin-left: 5px; margin-right: 5px; margin-bottom: 5px" ng-repeat="product in resultProducts">{{product}}</span>
                             </div>
 
                             <div class="container-fluid titleOfGeneralResult" style="margin-top: 20px">
