before marge coral

--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -143,12 +143,16 @@
                             </div>
                         </div>
 
+
+
+
+
+
                         <div role="tabpanel" class="tab-pane container fade" id="Stock">
                             <div class="tradingview-widget-container">
                                 <div id="tradingview_a5966"></div>
-                                <div class="tradingview-widget-copyright">
-                                    <div id="fillHrefForStock">
-                                    </div>
+                                <div class="tradingview-widget-copyright" id="fillHrefForStock">
+
                                 </div>
                             </div>
                         </div>
