--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -2,7 +2,7 @@
 
     <div id="foundResults" class="container justify-content-center">
         <div class="row justify-content-center" data-spy="scroll" data-target=".leftSideResults" data-offset="50">
-            <div class="leftSideResults border rounded justify-content-center" style="width: 250px;alignment: center">
+            <div class="leftSideResults border rounded justify-content-center" id="leftSideResults" style="width: 250px;alignment: center">
                 <table class="table">
                     <tr ng-repeat="result in resultsOfSearch">
                         <td>
@@ -11,9 +11,8 @@
                                     <h4 class="card-title" style="font-size: 15px;font-weight: bold">{{result.name}}</h4>
                                 </div>
                                 <div class="card-body">
-                                    <p style="font-size: 15px">
-                                        Country: {{result.country}}<br>
-                                        State: {{result.state}}
+                                    <p style="font-size: 15px; display: inline-block">
+                                        Address: {{result.address}}
                                     </p>
                                 </div>
                             </div>
