--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -173,9 +173,11 @@
                                     <li data-target="#articlesCarousel" data-slide-to="2"></li>
                                 </ul>
 
-                                <div class="carousel-inner">
+                                <div class="carousel-inner" id="resultNews" style="padding: 10px 45px 30px 45px">
                                     <div class="carousel-item active">
                                         <h2>111</h2>
+                                        <h4>BLA</h4>
+                                        <h5>Read More..</h5>
                                     </div>
                                     <div class="carousel-item">
                                         <h2>222</h2>
