update articles for search result

--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -164,8 +164,9 @@
                         </div>
 
                         <div role="tabpanel" class="tab-pane container fade" id="Articles">
+                            <br>
+                            <h3 id="articlesTitle"></h3><br>
 
-                            <h2>Articles About Us</h2>
                             <div id="articlesCarousel" class="carousel slide container-fluid" data-ride="carousel">
                                 <ul class="carousel-indicators">
                                     <li data-target="#articlesCarousel" data-slide-to="0" class="active"></li>
@@ -174,17 +175,7 @@
                                 </ul>
 
                                 <div class="carousel-inner" id="resultNews" style="padding: 10px 45px 30px 45px">
-                                    <div class="carousel-item active">
-                                        <h2>111</h2>
-                                        <h4>BLA</h4>
-                                        <h5>Read More..</h5>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <h2>222</h2>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <h2>333</h2>
-                                    </div>
+
                                 </div>
 
                                 <a class="carousel-control-prev" href="#articlesCarousel" data-slide="prev">
@@ -193,7 +184,10 @@
                                 <a class="carousel-control-next" href="#articlesCarousel" data-slide="next">
                                     <i class="fa fa-chevron-right"></i>
                                 </a>
+                            </div>
 
+                            <div id="notFoundNews">
+                                <h3>No Data About News Found</h3>
                             </div>
 
                         </div>
