fix alert in delete, change h1 in upload, delete radio in upload

--- a/html/insertNewFile.html
+++ b/html/insertNewFile.html
@@ -1,10 +1,9 @@
 <div id="new_file" style="margin-top: 70px">
-
-    <h1 style="text-align: center; font-size:4vw; text-shadow: 2px 2px #808080"><b>Insert New File</b></h1>
+    <center>
+    <h1>Insert New File</h1>
 
             <p>Please select the file you wish to upload</p>
 
-        <div style="text-align: center;">
             <form method="post" enctype="multipart/form-data">
                 <table border="0" align="center">
 
@@ -15,7 +14,7 @@
                             <input type="submit" name="submit" value="Upload" class="btn btn-outline-dark" ng-click="uploadFile()"/>
                         </td>
                     </tr>
-                    <tr>
+                    <!--<tr>
                         <td>
                             <div class="form-check">
                                 <label>
@@ -36,10 +35,11 @@
                                 </label>
                             </div>
                         </td>
-                    </tr>
+                    </tr>-->
                 </table>
             </form>
-        </div>
+    </center>
+</div>
 
     <div class="alert alert-success alert-dismissible" id="added_file_successfully" style="display: none">
         <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
@@ -50,11 +50,4 @@
         <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
         <strong>Oops!</strong> Couldn't add file.
     </div>
-</div>
 
-
- <!--action="<?php echo $_SERVER['PHP_SELF'];?>"
- action="/roni/#"
- ng-model="selectedUploadedFile"
- class="form-control"
- <i class="fas fa-arrow-up"></i>-->
