--- a/html/insertNewComp.html
+++ b/html/insertNewComp.html
@@ -1,14 +1,8 @@
 <div id="new_comp" style="margin-top: 70px">
     <center>
-   <!-- <h1><b>Add New Company</b></h1>
-    <center>
-
-            <p>Please insert the following details<br>
-            of the company you wish to add</p>-->
-
         <div class="row">
             <div class="col-md-12">
-                <h1><b>Add New Company</b></h1>
+                <h1>Add New Company</h1>
                 <p>Please insert the following details<br>
                     of the company you wish to add</p>
             </div>
