add rssd_id and update search by product

--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -61,7 +61,8 @@
                             </div>
 
                             <div class="products" style="margin-top: 20px">
-                                <span class="badge badge-pill badge-info" style="margin-left: 5px; margin-right: 5px; margin-bottom: 5px" ng-repeat="product in resultProducts">{{product}}</span>
+                                <span class="badge badge-pill badge-info" style="margin-left: 5px; margin-right: 5px; margin-bottom: 5px"
+                                      ng-repeat="product in resultProducts" ng-click="update_search_by_product(product)">{{product}}</span>
                             </div>
 
                             <div class="container-fluid titleOfGeneralResult" style="margin-top: 20px">
@@ -71,6 +72,10 @@
                                     </div>
                                     <div class="col-sm-5">
                                         <table class="table tableOfGeneralInfo">
+                                            <tr>
+                                                <td>RSSD ID</td>
+                                                <td id="rssdOfResult"></td>
+                                            </tr>
                                             <tr>
                                                 <td>Address</td>
                                                 <td id="addressOfResult"></td>
