--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -61,8 +61,14 @@
                             </div>
 
                             <div class="products" style="margin-top: 20px">
-                                <span class="badge badge-pill badge-info" style="margin-left: 5px; margin-right: 5px; margin-bottom: 5px"
-                                      ng-repeat="product in resultProducts" ng-click="update_search_by_product(product)">{{product}}</span>
+
+                                <div class="container justify-content-center">
+                                    <div class="row justify-content-center">
+                                        <div class="badge badge-pill badge-info" style="margin-left: 5px; margin-right: 5px; margin-bottom: 5px;
+                                            cursor: hand;" ng-repeat="product in resultProducts" ng-click="update_search_by_product(product)">{{product}}</div>
+                                    </div>
+                                </div>
+                                
                             </div>
 
                             <div class="container-fluid titleOfGeneralResult" style="margin-top: 20px">
