--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -175,11 +175,12 @@
         <div class="action fullscreen parallax">
             <div class="overlay">
                 <div class="container d-flex justify-content-center">
-                    <div class="col-md-8 col-md-offset-2 col-sm-12 text-center">
+                    <div class="col-md-12 col-md-offset-2 col-sm-12 text-center">
                         <h2>Would you like to know more?</h2>
                         <p class="download-text">We'll research the market, identify the relations and support you all the way.<br> Join us now to make smart decisions, based on data.</p>
                         <!-- /.subscribe form -->
                         <div class="col-sm-12" style="margin-top: 10px">
+
                             <div class="container-fluid text-center">
                                 <div class="row">
                                     <div class="col-sm-3 form-group contactFields">
@@ -188,15 +189,20 @@
                                     <div class="col-sm-3 form-group contactFields" style="padding: 0 0">
                                         <input class="form-control" id="contactEmail" name="email" placeholder="Email" type="email" required>
                                     </div>
-                                    <div class="col-sm-3 form-group contactFields">
+                                    <div class="col-sm-4 form-group contactFields">
                                         <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="1"></textarea>
                                     </div>
                                     <div class="col-sm-1 contactFields">
-                                        <button class="btn btn-info" type="submit">Send</button>
+                                        <button class="btn btn-info" ng-click="enter_comment()" type="submit">Send</button>
+                                    </div>
+                                    <div style="position:absolute;margin-left: 960px;width:300px"  id="errorComment">
+
                                     </div>
                                 </div>
+
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
