fix graph with new conntection type

--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -111,14 +111,16 @@
 
                             <div id="3d-graph" width="600px" ></div>
 
-                            <div class="container">
-                                <div class="row">
+                            <div class="container justify-content-center">
+                                <div class="row justify-content-center">
                                     <div class="col-sm-3" style="padding-left: 0">
                                         <span style="color: #31a9bc;font-size: 15px"><i class="fas fa-circle"></i>Selected Company</span>
                                     </div>
                                     <div class="col-sm-3" style="padding-left: 0">
                                         <span style="color: #464f52;font-size: 15px"><i class="fas fa-circle"></i>Related Company</span>
                                     </div>
+                                </div>
+                                <div class="row justify-content-center">
                                     <div class="col-sm-2" style="padding-left: 0">
                                         <span style="color: red;font-size: 15px"><i class="fas fa-minus"></i>Competitors</span>
                                     </div>
@@ -128,6 +130,12 @@
                                     <div class="col-sm-2" style="padding-left: 0">
                                         <span style="color: blue;font-size: 15px"><i class="fas fa-minus"></i>Subsidiaries</span>
                                     </div>
+                                    <div class="col-sm-3" style="padding-left: 0">
+                                        <span style="color:#c9cb00;font-size: 15px"><i class="fas fa-minus"></i>Cooperative-Services</span>
+                                    </div>
+                                    <div class="col-sm-3" style="padding-left: 0">
+                                        <span style="color:black;font-size: 15px"><i class="fas fa-minus"></i>Other Connections</span>
+                                    </div>
 
                                 </div>
                                 <hr>
@@ -135,7 +143,7 @@
                                     Click on Node or Connection for Details
                                 </div>
 
-                                <div class="row " id="graphDetails" style="display: none;">
+                                <div class="row " id="graphDetails" >
                                     <div class="col-sm-8">
                                         <table class="table tableOfGeneralInfo" style="font-size:15px">
                                             <tr>
