--- a/html/nav.html
+++ b/html/nav.html
@@ -125,7 +125,11 @@
 
 
 				</div>
+
 				<div class="modal-footer">
+					<div id="save_admin_log">
+
+					</div>
                     <button type="button" class="btn btn-secondary" ng-click="admin_save_changes()">Save</button>
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 				</div>
