--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -143,7 +143,7 @@
                                     <br>
                                     <br>
                                     <br>
-                                    <p style="font-size: x-small">Coral Sharf<br>Co-Founder, Web Developer</p>
+                                    <p style="font-size: x-small">Coral Scharf<br>Co-Founder, Web Developer</p>
                                 </div>
                             </div>
                         </div>
