before upload to main site

--- a/html/searchByCity.html
+++ b/html/searchByCity.html
@@ -1,7 +1,7 @@
 
 <div id="search_compByCity" style="margin-top: 70px">
     <div class="container">
-        <h1>Search Company by location</h1>
+        <h1>Search Company By Location</h1>
         <br>
         <h4>Enter the desired location</h4>
         <br>
