--- a/html/searchByName.html
+++ b/html/searchByName.html
@@ -1,9 +1,9 @@
 
 <div id="search_compByName" style="margin-top: 70px">
   <div class="tab-pane active" id="SearchByName">
-    <h1>Search company</h1>
+    <h1>Search For Company</h1>
       <br>
-    <p>Enter company name, CIK number or RSSD ID</p>
+    <p>Enter company name, RSSD ID or Products</p>
       <br>
 
         <div class="container justify-content-center">
