--- a/html/nav.html
+++ b/html/nav.html
@@ -30,7 +30,7 @@
                             <a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink3" data-toggle="dropdown" href="#"  aria-haspopup="true"
                                aria-expanded="false">Search</a>
                             <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink3">
-                                <a class="dropdown-item" href="#" ng-click="show_search('name');"><i class="fas fa-address-book"></i>  Search By Name</a>
+                                <a class="dropdown-item" href="#" ng-click="show_search('name');"><i class="fas fa-address-book"></i>  General Search</a>
                                 <a class="dropdown-item" href="#" ng-click="show_search('city');"><i class="fas fa-map-marker-alt"></i>  Search By Location</a>
                             </div>
                         </li>
