before marge coral

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -196,7 +196,7 @@
                                     <div class="col-sm-1 contactFields">
                                         <button class="btn btn-info" ng-click="enter_comment()" type="submit">Send</button>
                                     </div>
-                                    <div style="position:absolute;margin-left: 960px;width:300px"  id="errorComment">
+                                    <div style="position:absolute;margin-left: 960px;width:120px;"  id="errorComment">
 
                                     </div>
                                 </div>
